planner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
    spec:
      restartPolicy: Always
      containers:
      - name: planner
        image: oscarsotosanchez/planner:v1.0
