mongodb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes: 
      - name: pv-storage-mongo
        persistentVolumeClaim:
          claimName: pv-claim-mongo
      containers:
      - name: mongodb
        image: mongo:4.2.12-bionic
        ports:
        - containerPort: 27017
        - containerPort: 27018
        - containerPort: 27019
        volumeMounts:
        - mountPath: "/data/db" 
          name: pv-storage-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb-port-27017
  - port: 27018
    targetPort: 27018
    protocol: TCP
    name: mongodb-port-27018
  - port: 27019
    targetPort: 27019
    protocol: TCP
    name: mongodb-port-27019
  selector:
    app: mongodb
  type: ClusterIP
