mysql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: pv-storage-mysql
          persistentVolumeClaim:
            claimName: pv-claim-mysql      
      containers:
      - name: mysql
        image: mysql:8.0.22
        ports:
        - containerPort: 3306 
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: pv-storage-mysql

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql-port
  selector:
    app: mysql
  type: ClusterIP
