toposervice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      restartPolicy: Always
      containers:
      - name: toposervice
        image: oscarsotosanchez/toposervice:v1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: toposervice-service
  labels:
    app: toposervice
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: toposervice-port
  selector:
    app: toposervice
  type: ClusterIP
