ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: clusterip-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
   - host: cluster-ip
     http:
      paths:
      # toposervice MUST be accesible in http://cluster-ip/toposervice
      - path: /toposervice/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toposervice-service
            port:
              number: 8080
      #Server MUST be accesible in http://cluster-ip/
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 3000
